syntax_analyzer/y.output
Rules useless in parser due to conflicts

   78 if_sttmnt: IF '(' expression ')' block_sttmnt

   79 if_else_sttmnt: IF '(' expression ')' block_sttmnt ELSE block_sttmnt

   80 for_sttmnt: FOR '(' lhs '=' rhs ';' expression ';' lhs '=' rhs ')' block_sttmnt

   81 while_sttmnt: WHILE '(' expression ')' block_sttmnt


State 45 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 47 conflicts: 8 reduce/reduce
State 59 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 84 conflicts: 8 reduce/reduce
State 145 conflicts: 1 shift/reduce, 9 reduce/reduce
State 146 conflicts: 9 reduce/reduce
State 156 conflicts: 9 reduce/reduce
State 165 conflicts: 9 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: function functions
    3          | proc functions
    4          | function
    5          | proc

    6 function: FUNC IDENTIFIER '(' parameter_list ')' RETURN type '{' body_with_return '}'

    7 proc: PROC IDENTIFIER '(' parameter_list ')' '{' body '}'

    8 parameter_list: non_empty_param_list
    9               | ε

   10 non_empty_param_list: IDENTIFIER ',' non_empty_param_list
   11                     | IDENTIFIER ':' type ';' non_empty_param_list
   12                     | IDENTIFIER ':' type

   13 type: INT
   14     | BOOL
   15     | REAL
   16     | CHAR
   17     | STRING
   18     | INTPTR
   19     | CHARPTR
   20     | REALPTR

   21 body_with_return: body return_sttmnt
   22                 | return_sttmnt

   23 body: declarations statements
   24     | declarations
   25     | statements
   26     | ε

   27 declarations: declarations decl_sttmnt
   28             | decl_sttmnt

   29 statements: statements statement
   30           | statement

   31 statement: assign_sttmnt
   32          | call_sttmnt
   33          | if_sttmnt
   34          | if_else_sttmnt
   35          | block_sttmnt
   36          | for_sttmnt
   37          | while_sttmnt
   38          | return_sttmnt

   39 assign_sttmnt: lhs '=' rhs ';'

   40 lhs: IDENTIFIER
   41    | IDENTIFIER '[' expression ']'
   42    | '^' IDENTIFIER

   43 rhs: expression
   44    | STRING_LITERAL

   45 expression: expression OR expression
   46           | expression AND expression
   47           | expression EQ expression
   48           | expression NEQ expression
   49           | expression '>' expression
   50           | expression '<' expression
   51           | expression GTE expression
   52           | expression LTE expression
   53           | expression '+' expression
   54           | expression '-' expression
   55           | expression '*' expression
   56           | expression '/' expression
   57           | '!' expression
   58           | '-' expression
   59           | '^' expression
   60           | '&' IDENTIFIER
   61           | '(' expression ')'
   62           | IDENTIFIER '[' expression ']'
   63           | IDENTIFIER
   64           | INT_LITERAL
   65           | REAL_LITERAL
   66           | CHAR_LITERAL
   67           | TRUE_LITERAL
   68           | FALSE_LITERAL
   69           | NULL_TOK

   70 decl_sttmnt: VAR var_decl_list ';'

   71 var_decl_list: IDENTIFIER ',' var_decl_list
   72              | IDENTIFIER ':' type

   73 call_sttmnt: lhs '=' IDENTIFIER '(' arguments ')' ';'

   74 arguments: non_empty_arguments_list
   75          | ε

   76 non_empty_arguments_list: expression ',' non_empty_arguments_list
   77                         | expression

   78 if_sttmnt: IF '(' expression ')' block_sttmnt

   79 if_else_sttmnt: IF '(' expression ')' block_sttmnt ELSE block_sttmnt

   80 for_sttmnt: FOR '(' lhs '=' rhs ';' expression ';' lhs '=' rhs ')' block_sttmnt

   81 while_sttmnt: WHILE '(' expression ')' block_sttmnt

   82 block_sttmnt: '{' body '}'
   83             | statement

   84 return_sttmnt: RETURN expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 57
    '&' (38) 60
    '(' (40) 6 7 61 73 78 79 80 81
    ')' (41) 6 7 61 73 78 79 80 81
    '*' (42) 55
    '+' (43) 53
    ',' (44) 10 71 76
    '-' (45) 54 58
    '/' (47) 56
    ':' (58) 11 12 72
    ';' (59) 11 39 70 73 80 84
    '<' (60) 50
    '=' (61) 39 73 80
    '>' (62) 49
    '[' (91) 41 62
    ']' (93) 41 62
    '^' (94) 42 59
    '{' (123) 6 7 82
    '}' (125) 6 7 82
    error (256)
    BOOL (258) 14
    CHAR (259) 16
    INT (260) 13
    REAL (261) 15
    STRING (262) 17
    INTPTR (263) 18
    CHARPTR (264) 19
    REALPTR (265) 20
    IF (266) 78 79
    ELSE (267) 79
    WHILE (268) 81
    FOR (269) 80
    VAR (270) 70
    FUNC (271) 6
    PROC (272) 7
    RETURN (273) 6 84
    NULL_TOK (274) 69
    TRUE_LITERAL <int_val> (275) 67
    FALSE_LITERAL <int_val> (276) 68
    INT_LITERAL <int_val> (277) 64
    REAL_LITERAL <real_val> (278) 65
    STRING_LITERAL <str_val> (279) 44
    CHAR_LITERAL <char_val> (280) 66
    IDENTIFIER <str_val> (281) 6 7 10 11 12 40 41 42 60 62 63 71 72 73
    EQ (282) 47
    NEQ (283) 48
    GTE (284) 51
    LTE (285) 52
    AND (286) 46
    OR (287) 45


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program <node_val> (53)
        on left: 1
        on right: 0
    functions <node_val> (54)
        on left: 2 3 4 5
        on right: 1 2 3
    function <node_val> (55)
        on left: 6
        on right: 2 4
    proc <node_val> (56)
        on left: 7
        on right: 3 5
    parameter_list <node_val> (57)
        on left: 8 9
        on right: 6 7
    non_empty_param_list <node_val> (58)
        on left: 10 11 12
        on right: 8 10 11
    type <node_val> (59)
        on left: 13 14 15 16 17 18 19 20
        on right: 6 11 12 72
    body_with_return <node_val> (60)
        on left: 21 22
        on right: 6
    body <node_val> (61)
        on left: 23 24 25 26
        on right: 7 21 82
    declarations <node_val> (62)
        on left: 27 28
        on right: 23 24 27
    statements <node_val> (63)
        on left: 29 30
        on right: 23 25 29
    statement <node_val> (64)
        on left: 31 32 33 34 35 36 37 38
        on right: 29 30 83
    assign_sttmnt <node_val> (65)
        on left: 39
        on right: 31
    lhs <node_val> (66)
        on left: 40 41 42
        on right: 39 73 80
    rhs <node_val> (67)
        on left: 43 44
        on right: 39 80
    expression <node_val> (68)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 41 43 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 61 62 76 77 78 79 80 81 84
    decl_sttmnt <node_val> (69)
        on left: 70
        on right: 27 28
    var_decl_list <node_val> (70)
        on left: 71 72
        on right: 70 71
    call_sttmnt <node_val> (71)
        on left: 73
        on right: 32
    arguments <node_val> (72)
        on left: 74 75
        on right: 73
    non_empty_arguments_list <node_val> (73)
        on left: 76 77
        on right: 74 76
    if_sttmnt <node_val> (74)
        on left: 78
        on right: 33
    if_else_sttmnt <node_val> (75)
        on left: 79
        on right: 34
    for_sttmnt <node_val> (76)
        on left: 80
        on right: 36
    while_sttmnt <node_val> (77)
        on left: 81
        on right: 37
    block_sttmnt <node_val> (78)
        on left: 82 83
        on right: 35 78 79 80 81
    return_sttmnt <node_val> (79)
        on left: 84
        on right: 21 22 38


State 0

    0 $accept: • program $end

    FUNC  shift, and go to state 1
    PROC  shift, and go to state 2

    program    go to state 3
    functions  go to state 4
    function   go to state 5
    proc       go to state 6


State 1

    6 function: FUNC • IDENTIFIER '(' parameter_list ')' RETURN type '{' body_with_return '}'

    IDENTIFIER  shift, and go to state 7


State 2

    7 proc: PROC • IDENTIFIER '(' parameter_list ')' '{' body '}'

    IDENTIFIER  shift, and go to state 8


State 3

    0 $accept: program • $end

    $end  shift, and go to state 9


State 4

    1 program: functions •

    $default  reduce using rule 1 (program)


State 5

    2 functions: function • functions
    4          | function •

    FUNC  shift, and go to state 1
    PROC  shift, and go to state 2

    $default  reduce using rule 4 (functions)

    functions  go to state 10
    function   go to state 5
    proc       go to state 6


State 6

    3 functions: proc • functions
    5          | proc •

    FUNC  shift, and go to state 1
    PROC  shift, and go to state 2

    $default  reduce using rule 5 (functions)

    functions  go to state 11
    function   go to state 5
    proc       go to state 6


State 7

    6 function: FUNC IDENTIFIER • '(' parameter_list ')' RETURN type '{' body_with_return '}'

    '('  shift, and go to state 12


State 8

    7 proc: PROC IDENTIFIER • '(' parameter_list ')' '{' body '}'

    '('  shift, and go to state 13


State 9

    0 $accept: program $end •

    $default  accept


State 10

    2 functions: function functions •

    $default  reduce using rule 2 (functions)


State 11

    3 functions: proc functions •

    $default  reduce using rule 3 (functions)


State 12

    6 function: FUNC IDENTIFIER '(' • parameter_list ')' RETURN type '{' body_with_return '}'

    IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 9 (parameter_list)

    parameter_list        go to state 15
    non_empty_param_list  go to state 16


State 13

    7 proc: PROC IDENTIFIER '(' • parameter_list ')' '{' body '}'

    IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 9 (parameter_list)

    parameter_list        go to state 17
    non_empty_param_list  go to state 16


State 14

   10 non_empty_param_list: IDENTIFIER • ',' non_empty_param_list
   11                     | IDENTIFIER • ':' type ';' non_empty_param_list
   12                     | IDENTIFIER • ':' type

    ','  shift, and go to state 18
    ':'  shift, and go to state 19


State 15

    6 function: FUNC IDENTIFIER '(' parameter_list • ')' RETURN type '{' body_with_return '}'

    ')'  shift, and go to state 20


State 16

    8 parameter_list: non_empty_param_list •

    $default  reduce using rule 8 (parameter_list)


State 17

    7 proc: PROC IDENTIFIER '(' parameter_list • ')' '{' body '}'

    ')'  shift, and go to state 21


State 18

   10 non_empty_param_list: IDENTIFIER ',' • non_empty_param_list

    IDENTIFIER  shift, and go to state 14

    non_empty_param_list  go to state 22


State 19

   11 non_empty_param_list: IDENTIFIER ':' • type ';' non_empty_param_list
   12                     | IDENTIFIER ':' • type

    BOOL     shift, and go to state 23
    CHAR     shift, and go to state 24
    INT      shift, and go to state 25
    REAL     shift, and go to state 26
    STRING   shift, and go to state 27
    INTPTR   shift, and go to state 28
    CHARPTR  shift, and go to state 29
    REALPTR  shift, and go to state 30

    type  go to state 31


State 20

    6 function: FUNC IDENTIFIER '(' parameter_list ')' • RETURN type '{' body_with_return '}'

    RETURN  shift, and go to state 32


State 21

    7 proc: PROC IDENTIFIER '(' parameter_list ')' • '{' body '}'

    '{'  shift, and go to state 33


State 22

   10 non_empty_param_list: IDENTIFIER ',' non_empty_param_list •

    $default  reduce using rule 10 (non_empty_param_list)


State 23

   14 type: BOOL •

    $default  reduce using rule 14 (type)


State 24

   16 type: CHAR •

    $default  reduce using rule 16 (type)


State 25

   13 type: INT •

    $default  reduce using rule 13 (type)


State 26

   15 type: REAL •

    $default  reduce using rule 15 (type)


State 27

   17 type: STRING •

    $default  reduce using rule 17 (type)


State 28

   18 type: INTPTR •

    $default  reduce using rule 18 (type)


State 29

   19 type: CHARPTR •

    $default  reduce using rule 19 (type)


State 30

   20 type: REALPTR •

    $default  reduce using rule 20 (type)


State 31

   11 non_empty_param_list: IDENTIFIER ':' type • ';' non_empty_param_list
   12                     | IDENTIFIER ':' type •

    ';'  shift, and go to state 34

    $default  reduce using rule 12 (non_empty_param_list)


State 32

    6 function: FUNC IDENTIFIER '(' parameter_list ')' RETURN • type '{' body_with_return '}'

    BOOL     shift, and go to state 23
    CHAR     shift, and go to state 24
    INT      shift, and go to state 25
    REAL     shift, and go to state 26
    STRING   shift, and go to state 27
    INTPTR   shift, and go to state 28
    CHARPTR  shift, and go to state 29
    REALPTR  shift, and go to state 30

    type  go to state 35


State 33

    7 proc: PROC IDENTIFIER '(' parameter_list ')' '{' • body '}'

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    FOR         shift, and go to state 38
    VAR         shift, and go to state 39
    RETURN      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '^'         shift, and go to state 42
    '{'         shift, and go to state 43

    $default  reduce using rule 26 (body)

    body            go to state 44
    declarations    go to state 45
    statements      go to state 46
    statement       go to state 47
    assign_sttmnt   go to state 48
    lhs             go to state 49
    decl_sttmnt     go to state 50
    call_sttmnt     go to state 51
    if_sttmnt       go to state 52
    if_else_sttmnt  go to state 53
    for_sttmnt      go to state 54
    while_sttmnt    go to state 55
    block_sttmnt    go to state 56
    return_sttmnt   go to state 57


State 34

   11 non_empty_param_list: IDENTIFIER ':' type ';' • non_empty_param_list

    IDENTIFIER  shift, and go to state 14

    non_empty_param_list  go to state 58


State 35

    6 function: FUNC IDENTIFIER '(' parameter_list ')' RETURN type • '{' body_with_return '}'

    '{'  shift, and go to state 59


State 36

   78 if_sttmnt: IF • '(' expression ')' block_sttmnt
   79 if_else_sttmnt: IF • '(' expression ')' block_sttmnt ELSE block_sttmnt

    '('  shift, and go to state 60


State 37

   81 while_sttmnt: WHILE • '(' expression ')' block_sttmnt

    '('  shift, and go to state 61


State 38

   80 for_sttmnt: FOR • '(' lhs '=' rhs ';' expression ';' lhs '=' rhs ')' block_sttmnt

    '('  shift, and go to state 62


State 39

   70 decl_sttmnt: VAR • var_decl_list ';'

    IDENTIFIER  shift, and go to state 63

    var_decl_list  go to state 64


State 40

   84 return_sttmnt: RETURN • expression ';'

    NULL_TOK       shift, and go to state 65
    TRUE_LITERAL   shift, and go to state 66
    FALSE_LITERAL  shift, and go to state 67
    INT_LITERAL    shift, and go to state 68
    REAL_LITERAL   shift, and go to state 69
    CHAR_LITERAL   shift, and go to state 70
    IDENTIFIER     shift, and go to state 71
    '-'            shift, and go to state 72
    '!'            shift, and go to state 73
    '^'            shift, and go to state 74
    '&'            shift, and go to state 75
    '('            shift, and go to state 76

    expression  go to state 77


State 41

   40 lhs: IDENTIFIER •
   41    | IDENTIFIER • '[' expression ']'

    '['  shift, and go to state 78

    $default  reduce using rule 40 (lhs)


State 42

   42 lhs: '^' • IDENTIFIER

    IDENTIFIER  shift, and go to state 79


State 43

   82 block_sttmnt: '{' • body '}'

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    FOR         shift, and go to state 38
    VAR         shift, and go to state 39
    RETURN      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '^'         shift, and go to state 42
    '{'         shift, and go to state 43

    $default  reduce using rule 26 (body)

    body            go to state 80
    declarations    go to state 45
    statements      go to state 46
    statement       go to state 47
    assign_sttmnt   go to state 48
    lhs             go to state 49
    decl_sttmnt     go to state 50
    call_sttmnt     go to state 51
    if_sttmnt       go to state 52
    if_else_sttmnt  go to state 53
    for_sttmnt      go to state 54
    while_sttmnt    go to state 55
    block_sttmnt    go to state 56
    return_sttmnt   go to state 57


State 44

    7 proc: PROC IDENTIFIER '(' parameter_list ')' '{' body • '}'

    '}'  shift, and go to state 81


State 45

   23 body: declarations • statements
   24     | declarations •
   27 declarations: declarations • decl_sttmnt

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    FOR         shift, and go to state 38
    VAR         shift, and go to state 39
    RETURN      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '^'         shift, and go to state 42
    '{'         shift, and go to state 43

    RETURN    [reduce using rule 24 (body)]
    $default  reduce using rule 24 (body)

    statements      go to state 82
    statement       go to state 47
    assign_sttmnt   go to state 48
    lhs             go to state 49
    decl_sttmnt     go to state 83
    call_sttmnt     go to state 51
    if_sttmnt       go to state 52
    if_else_sttmnt  go to state 53
    for_sttmnt      go to state 54
    while_sttmnt    go to state 55
    block_sttmnt    go to state 56
    return_sttmnt   go to state 57


State 46

   25 body: statements •
   29 statements: statements • statement

    IF          shift, and go to state 36
    WHILE       shift, and go to state 37
    FOR         shift, and go to state 38
    RETURN      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '^'         shift, and go to state 42
    '{'         shift, and go to state 43

    RETURN    [reduce using rule 25 (body)]
    $default  reduce using rule 25 (body)

    statement       go to state 84
    assign_sttmnt   go to state 48
    lhs             go to state 49
    call_sttmnt     go to state 51
    if_sttmnt       go to state 52
    if_else_sttmnt  go to state 53
    for_sttmnt      go to state 54
    while_sttmnt    go to state 55
    block_sttmnt    go to state 56
    return_sttmnt   go to state 57


State 47

   30 statements: statement •
   83 block_sttmnt: statement •

    IF          reduce using rule 30 (statements)
    IF          [reduce using rule 83 (block_sttmnt)]
    WHILE       reduce using rule 30 (statements)
    WHILE       [reduce using rule 83 (block_sttmnt)]
    FOR         reduce using rule 30 (statements)
    FOR         [reduce using rule 83 (block_sttmnt)]
    RETURN      reduce using rule 30 (statements)
    RETURN      [reduce using rule 83 (block_sttmnt)]
    IDENTIFIER  reduce using rule 30 (statements)
    IDENTIFIER  [reduce using rule 83 (block_sttmnt)]
    '^'         reduce using rule 30 (statements)
    '^'         [reduce using rule 83 (block_sttmnt)]
    '{'         reduce using rule 30 (statements)
    '{'         [reduce using rule 83 (block_sttmnt)]
    '}'         reduce using rule 30 (statements)
    '}'         [reduce using rule 83 (block_sttmnt)]
    $default    reduce using rule 30 (statements)


State 48

   31 statement: assign_sttmnt •

    $default  reduce using rule 31 (statement)


State 49

   39 assign_sttmnt: lhs • '=' rhs ';'
   73 call_sttmnt: lhs • '=' IDENTIFIER '(' arguments ')' ';'

    '='  shift, and go to state 85


State 50

   28 declarations: decl_sttmnt •

    $default  reduce using rule 28 (declarations)


State 51

   32 statement: call_sttmnt •

    $default  reduce using rule 32 (statement)


State 52

   33 statement: if_sttmnt •

    $default  reduce using rule 33 (statement)

